--- a/prueba.html
+++ b/prueba.html
@@ -12,6 +12,14 @@
     <p>GOGOGOGOG</p>
     <p>nuevo <p>
     <p>GOGOGOGOG</p>
+
+    <h2>ADIOS MUNDO</h2>
+    <p>GOGOGOGOG</p>
+    <p>nuevo <p>
+    <p>GOGOGOGOG</p>UTF-8 <h2>ADIOS MUNDO</h2>
+    <p>GOGOGOGOG</p>
+    <p>nuevo <p>
+    <p>GOGOGOGOG</p>s
 </body>
 
 </html>
